--- a/pom.xml
+++ b/pom.xml
@@ -28,13 +28,13 @@
 
 	<groupId>io.gravitee.repository</groupId>
 	<artifactId>gravitee-repository-redis</artifactId>
-	<version>0.4.0-SNAPSHOT</version>
+	<version>0.4.0</version>
 	<name>Gravitee IO - API Management - Repository Redis</name>
 
 	<properties>
 		<jedis.version>2.8.0</jedis.version>
 		<jackson.version>2.5.3</jackson.version>
-		<gravitee-repository.version>0.8.0-SNAPSHOT</gravitee-repository.version>
+		<gravitee-repository.version>0.8.0</gravitee-repository.version>
 		<spring-data-redis.version>1.6.2.RELEASE</spring-data-redis.version>
 	</properties>
 
