--- a/pom.xml
+++ b/pom.xml
@@ -30,14 +30,14 @@
 	<artifactId>gravitee-management-api</artifactId>
 	<packaging>pom</packaging>
 
-	<version>0.9.0-SNAPSHOT</version>
+	<version>0.8.1-SNAPSHOT</version>
 	<name>Gravitee IO - Management</name>
 
 	<properties>
 		<gravitee-common.version>0.5.0</gravitee-common.version>
 		<gravitee-definition.version>0.8.0</gravitee-definition.version>
-		<gravitee-plugin-core.version>0.6.0</gravitee-plugin-core.version>
-		<gravitee-plugin-policy.version>0.6.0</gravitee-plugin-policy.version>
+		<gravitee-plugin-core.version>0.7.0-SNAPSHOT</gravitee-plugin-core.version>
+		<gravitee-plugin-policy.version>0.7.0-SNAPSHOT</gravitee-plugin-policy.version>
 		<gravitee-repository.version>0.8.0</gravitee-repository.version>
 		<gravitee-repository-elasticsearch.version>0.6.0</gravitee-repository-elasticsearch.version>
 		<gravitee-repository-mongodb.version>0.8.0</gravitee-repository-mongodb.version>
