--- a/gravitee-gateway-services/gravitee-gateway-services-apikeyscache/pom.xml
+++ b/gravitee-gateway-services/gravitee-gateway-services-apikeyscache/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>io.gravitee.gateway.services</groupId>
         <artifactId>gravitee-gateway-services</artifactId>
-        <version>0.8.1-SNAPSHOT</version>
+        <version>0.8.1</version>
     </parent>
 
     <artifactId>gravitee-gateway-services-apikeyscache</artifactId>
