--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 	<artifactId>gravitee-management-api</artifactId>
 	<packaging>pom</packaging>
 
-	<version>0.8.1</version>
+	<version>0.9.0-SNAPSHOT</version>
 	<name>Gravitee IO - Management</name>
 
 	<properties>
