--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,8 @@
     "angular-messages": "~1.4.9",
     "v-accordion": "~1.4.1",
     "angular-timeline": "~1.6.2",
-    "jsdiff": "~2.2.1"
+    "jsdiff": "~2.2.1",
+    "angular-utf8-base64": "~0.0.5"
   },
   "resolutions": {
     "angular": "~1.4.9",
