--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gravitee-management-webui",
-  "version": "0.8.2",
+  "version": "0.9.0-SNAPSHOT",
   "description": "Gravitee IO - API Management - Admin - Web Console",
   "dependencies": {},
   "scripts": {
