--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,7 @@
                             <includes>
                                 <include>${project.basedir}/bower.json</include>
                                 <include>${project.basedir}/package.json</include>
+                                <include>${project.basedir}/src/constants.js</include>
                             </includes>
                             <replacements>
                                 <replacement>
