--- a/pom.xml
+++ b/pom.xml
@@ -17,155 +17,151 @@
 
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<groupId>io.gravitee</groupId>
-		<artifactId>gravitee-parent</artifactId>
-		<version>4</version>
-	</parent>
+    <parent>
+        <groupId>io.gravitee</groupId>
+        <artifactId>gravitee-parent</artifactId>
+        <version>4</version>
+    </parent>
 
-	<groupId>io.gravitee.management</groupId>
-	<artifactId>gravitee-management-api</artifactId>
-	<packaging>pom</packaging>
+    <groupId>io.gravitee.management</groupId>
+    <artifactId>gravitee-management-api</artifactId>
+    <packaging>pom</packaging>
 
-	<version>0.14.0-SNAPSHOT</version>
-	<name>Gravitee IO - Management</name>
+    <version>0.14.0-SNAPSHOT</version>
+    <name>Gravitee IO - Management</name>
 
-	<properties>
-		<gravitee-definition.version>0.11.0</gravitee-definition.version>
-		<gravitee-common.version>0.9.0</gravitee-common.version>
-		<gravitee-plugin-core.version>0.11.0</gravitee-plugin-core.version>
-		<gravitee-plugin-policy.version>0.11.0</gravitee-plugin-policy.version>
-		<gravitee-repository.version>0.12.0</gravitee-repository.version>
-		<gravitee-repository-elasticsearch.version>0.7.0</gravitee-repository-elasticsearch.version>
-		<gravitee-repository-mongodb.version>0.10.0-SNAPSHOT</gravitee-repository-mongodb.version>
-		<gravitee-repository-couchbase.version>0.1.0-SNAPSHOT</gravitee-repository-couchbase.version>
-		<gravitee-repository-jdbc.version>0.3.0</gravitee-repository-jdbc.version>
-		<gravitee-gateway-api.version>0.10.0</gravitee-gateway-api.version>
+    <properties>
+        <gravitee-definition.version>0.11.0</gravitee-definition.version>
+        <gravitee-common.version>0.9.0</gravitee-common.version>
+        <gravitee-plugin-core.version>0.11.0</gravitee-plugin-core.version>
+        <gravitee-plugin-policy.version>0.11.0</gravitee-plugin-policy.version>
+        <gravitee-repository.version>0.12.0</gravitee-repository.version>
+        <gravitee-repository-elasticsearch.version>0.7.0</gravitee-repository-elasticsearch.version>
+        <gravitee-repository-mongodb.version>0.10.0-SNAPSHOT</gravitee-repository-mongodb.version>
+        <gravitee-repository-couchbase.version>0.1.0-SNAPSHOT</gravitee-repository-couchbase.version>
+        <gravitee-repository-jdbc.version>0.3.0</gravitee-repository-jdbc.version>
+        <gravitee-gateway-api.version>0.10.0</gravitee-gateway-api.version>
 
-		<apacheds-server-jndi.version>1.5.5</apacheds-server-jndi.version>
-		<jackson.version>2.7.3</jackson.version>
-		<javax.servlet-api.version>3.1.0</javax.servlet-api.version>
-		<jersey.version>2.19</jersey.version>
-		<jetty.version>9.3.3.v20150827</jetty.version>
-		<spring.security.version>4.0.3.RELEASE</spring.security.version>
-		<spring.security.oauth2.version>2.0.8.RELEASE</spring.security.oauth2.version>
-		<validation-api.version>1.1.0.Final</validation-api.version>
-		<mail.version>1.4.7</mail.version>
-		<freemarker.version>2.3.22</freemarker.version>
-		<java-jwt.version>2.1.0</java-jwt.version>
-		<guava.version>18.0</guava.version>
-	</properties>
+        <apacheds-server-jndi.version>1.5.5</apacheds-server-jndi.version>
+        <jackson.version>2.7.3</jackson.version>
+        <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
+        <jersey.version>2.19</jersey.version>
+        <jetty.version>9.3.3.v20150827</jetty.version>
+        <spring.security.version>4.0.3.RELEASE</spring.security.version>
+        <spring.security.oauth2.version>2.0.8.RELEASE</spring.security.oauth2.version>
+        <validation-api.version>1.1.0.Final</validation-api.version>
+        <mail.version>1.4.7</mail.version>
+        <freemarker.version>2.3.22</freemarker.version>
+        <java-jwt.version>2.1.0</java-jwt.version>
+        <guava.version>18.0</guava.version>
+    </properties>
 
-	<modules>
-		<module>gravitee-management-api-model</module>
-		<module>gravitee-management-api-service</module>
-		<module>gravitee-management-api-rest</module>
-		<module>gravitee-management-api-war</module>
-		<module>gravitee-management-api-standalone</module>
-		<module>gravitee-management-api-security</module>
-		<module>gravitee-management-api-idp</module>
-		<module>gravitee-management-api-repository</module>
-	</modules>
+    <modules>
+        <module>gravitee-management-api-model</module>
+        <module>gravitee-management-api-service</module>
+        <module>gravitee-management-api-rest</module>
+        <module>gravitee-management-api-war</module>
+        <module>gravitee-management-api-standalone</module>
+        <module>gravitee-management-api-security</module>
+        <module>gravitee-management-api-idp</module>
+        <module>gravitee-management-api-repository</module>
+    </modules>
 
-	<dependencyManagement>
-		<dependencies>
-			<!-- Gravitee.io -->
-			<dependency>
-				<groupId>io.gravitee.repository</groupId>
-				<artifactId>gravitee-repository</artifactId>
-				<version>${gravitee-repository.version}</version>
-			</dependency>
+    <dependencyManagement>
+        <dependencies>
+            <!-- Gravitee.io -->
+            <dependency>
+                <groupId>io.gravitee.repository</groupId>
+                <artifactId>gravitee-repository</artifactId>
+                <version>${gravitee-repository.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.gravitee.common</groupId>
+                <artifactId>gravitee-common</artifactId>
+                <version>${gravitee-common.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.gravitee.definition</groupId>
+                <artifactId>gravitee-definition-jackson</artifactId>
+                <version>${gravitee-definition.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.gravitee.definition</groupId>
+                <artifactId>gravitee-definition-model</artifactId>
+                <version>${gravitee-definition.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.gravitee.plugin</groupId>
+                <artifactId>gravitee-plugin-core</artifactId>
+                <version>${gravitee-plugin-core.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.gravitee.plugin</groupId>
+                <artifactId>gravitee-plugin-policy</artifactId>
+                <version>${gravitee-plugin-policy.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.gravitee.gateway</groupId>
+                <artifactId>gravitee-gateway-api</artifactId>
+                <version>${gravitee-gateway-api.version}</version>
+            </dependency>
 
-			<dependency>
-				<groupId>io.gravitee.common</groupId>
-				<artifactId>gravitee-common</artifactId>
-				<version>${gravitee-common.version}</version>
-			</dependency>
+            <!-- Spring -->
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-aop</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-beans</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context-support</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-core</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-expression</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-tx</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-web</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
-			<dependency>
-				<groupId>io.gravitee.definition</groupId>
-				<artifactId>gravitee-definition-jackson</artifactId>
-				<version>${gravitee-definition.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>io.gravitee.definition</groupId>
-				<artifactId>gravitee-definition-model</artifactId>
-				<version>${gravitee-definition.version}</version>
-			</dependency>
-
-			<!--
-			<dependency>
-				<groupId>io.gravitee.repository</groupId>
-				<artifactId>gravitee-repository-mongodb</artifactId>
-				<version>${gravitee-repository-mongodb.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>io.gravitee.repository</groupId>
-				<artifactId>gravitee-repository-couchbase</artifactId>
-				<version>${gravitee-repository-couchbase.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>io.gravitee.repository</groupId>
-				<artifactId>gravitee-repository-jdbc</artifactId>
-				<version>${gravitee-repository-jdbc.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>io.gravitee.repository</groupId>
-				<artifactId>gravitee-repository-elasticsearch</artifactId>
-				<version>${gravitee-repository-elasticsearch.version}</version>
-			</dependency>
-			-->
-
-			<dependency>
-				<groupId>io.gravitee.plugin</groupId>
-				<artifactId>gravitee-plugin-core</artifactId>
-				<version>${gravitee-plugin-core.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>io.gravitee.plugin</groupId>
-				<artifactId>gravitee-plugin-policy</artifactId>
-				<version>${gravitee-plugin-policy.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>io.gravitee.gateway</groupId>
-				<artifactId>gravitee-gateway-api</artifactId>
-				<version>${gravitee-gateway-api.version}</version>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
-
-	<dependencies>
-		<!--
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>javax.servlet-api</artifactId>
-			<version>${javax.servlet-api.version}</version>
-		</dependency>
-		-->
-		<dependency>
-			<groupId>io.gravitee.common</groupId>
-			<artifactId>gravitee-common</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>${slf4j.version}</version>
-		</dependency>
-		<!--
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context-support</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
-		-->
-	</dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>io.gravitee.common</groupId>
+            <artifactId>gravitee-common</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+    </dependencies>
 </project>
