--- a/pom.xml
+++ b/pom.xml
@@ -148,7 +148,7 @@
 
     <properties>
         <gravitee-definition.version>0.12.0-SNAPSHOT</gravitee-definition.version>
-        <gravitee-common.version>0.9.0</gravitee-common.version>
+        <gravitee-common.version>0.10.0-SNAPSHOT</gravitee-common.version>
         <gravitee-repository.version>0.12.0</gravitee-repository.version>
         <gravitee-plugin-core.version>0.12.0-SNAPSHOT</gravitee-plugin-core.version>
         <gravitee-plugin-policy.version>0.12.0-SNAPSHOT</gravitee-plugin-policy.version>
