--- a/pom.xml
+++ b/pom.xml
@@ -147,7 +147,7 @@
     </dependencies>
 
     <properties>
-        <gravitee-definition.version>0.13.0</gravitee-definition.version>
+        <gravitee-definition.version>0.14.0-SNAPSHOT</gravitee-definition.version>
         <gravitee-common.version>0.10.0</gravitee-common.version>
         <gravitee-repository.version>0.13.0</gravitee-repository.version>
         <gravitee-plugin-core.version>0.12.0</gravitee-plugin-core.version>
@@ -155,7 +155,7 @@
         <gravitee-plugin-resource.version>0.12.0</gravitee-plugin-resource.version>
         <gravitee-policy-api.version>0.9.0</gravitee-policy-api.version>
         <gravitee-gateway-api.version>0.12.0</gravitee-gateway-api.version>
-        <gravitee-reporter-api.version>0.8.0</gravitee-reporter-api.version>
+        <gravitee-reporter-api.version>0.9.0-SNAPSHOT</gravitee-reporter-api.version>
         <jackson.version>2.7.3</jackson.version>
         <vertx.version>3.2.1</vertx.version>
         <jetty.version>9.3.3.v20150827</jetty.version>
