--- a/pom.xml
+++ b/pom.xml
@@ -154,7 +154,7 @@
         <gravitee-plugin-policy.version>0.12.0</gravitee-plugin-policy.version>
         <gravitee-plugin-resource.version>0.12.0</gravitee-plugin-resource.version>
         <gravitee-policy-api.version>0.9.0</gravitee-policy-api.version>
-        <gravitee-gateway-api.version>0.12.0</gravitee-gateway-api.version>
+        <gravitee-gateway-api.version>0.13.0-SNAPSHOT</gravitee-gateway-api.version>
         <gravitee-reporter-api.version>0.9.0-SNAPSHOT</gravitee-reporter-api.version>
         <jackson.version>2.7.3</jackson.version>
         <vertx.version>3.2.1</vertx.version>
