--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,12 @@
 			<artifactId>jetty-util</artifactId>
 			<version>${jetty.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.4</version>
+		</dependency>
 
         <dependency>
             <groupId>org.slf4j</groupId>
