--- a/pom.xml
+++ b/pom.xml
@@ -148,14 +148,14 @@
 
     <properties>
         <gravitee-definition.version>0.15.0</gravitee-definition.version>
-        <gravitee-common.version>0.10.0</gravitee-common.version>
-        <gravitee-repository.version>0.15.0</gravitee-repository.version>
+        <gravitee-common.version>0.11.0-SNAPSHOT</gravitee-common.version>
+        <gravitee-repository.version>0.16.0-SNAPSHOT</gravitee-repository.version>
         <gravitee-plugin-core.version>0.13.0</gravitee-plugin-core.version>
         <gravitee-plugin-policy.version>0.13.0</gravitee-plugin-policy.version>
         <gravitee-plugin-resource.version>0.13.0</gravitee-plugin-resource.version>
         <gravitee-policy-api.version>0.9.0</gravitee-policy-api.version>
-        <gravitee-gateway-api.version>0.13.0</gravitee-gateway-api.version>
-        <gravitee-reporter-api.version>0.9.0</gravitee-reporter-api.version>
+        <gravitee-gateway-api.version>0.14.0-SNAPSHOT</gravitee-gateway-api.version>
+        <gravitee-reporter-api.version>0.10.0-SNAPSHOT</gravitee-reporter-api.version>
         <jackson.version>2.7.3</jackson.version>
         <vertx.version>3.3.2</vertx.version>
         <jetty.version>9.3.3.v20150827</jetty.version>
