--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
     <name>Gravitee IO - API Management - Test Repository</name>
 
     <properties>
-        <gravitee-repository.version>0.13.0</gravitee-repository.version>
+        <gravitee-repository.version>0.16.0-SNAPSHOT</gravitee-repository.version>
         <commons-io.version>1.3.2</commons-io.version>
         <jackson-mapper-asl.version>1.9.13</jackson-mapper-asl.version>
         <javax.inject.version>1</javax.inject.version>
