--- a/pom.xml
+++ b/pom.xml
@@ -147,7 +147,7 @@
     </dependencies>
 
     <properties>
-        <gravitee-definition.version>0.15.0</gravitee-definition.version>
+        <gravitee-definition.version>0.16.0-SNAPSHOT</gravitee-definition.version>
         <gravitee-common.version>0.11.0-SNAPSHOT</gravitee-common.version>
         <gravitee-repository.version>0.16.0-SNAPSHOT</gravitee-repository.version>
         <gravitee-plugin-core.version>0.13.0</gravitee-plugin-core.version>
