--- a/pom.xml
+++ b/pom.xml
@@ -28,16 +28,16 @@
 
 	<groupId>io.gravitee.repository</groupId>
 	<artifactId>gravitee-repository-mongodb</artifactId>
-	<version>0.15.0-SNAPSHOT</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<name>Gravitee IO - API Management - Repository MongoDB</name>
 
 	<properties>
-		<gravitee-repository.version>0.16.0</gravitee-repository.version>
+		<gravitee-repository.version>1.0.0-SNAPSHOT</gravitee-repository.version>
 		<embed.mongo.version>1.50.2</embed.mongo.version>
 		<mongo.version>3.0.4</mongo.version>
 		<spring.data.mongodb.version>1.7.2.RELEASE</spring.data.mongodb.version>
 		<dozer.version>5.4.0</dozer.version>
-		<gravitee-repository-test.version>0.3.0</gravitee-repository-test.version>
+		<gravitee-repository-test.version>1.0.0-SNAPSHOT</gravitee-repository-test.version>
 		<maven-dependency-plugin.version>2.10</maven-dependency-plugin.version>
 	</properties>
 
